Bug 102988 - [CFL] DUT doesn't get back from s3, s4 and freeze
Summary: [CFL] DUT doesn't get back from s3, s4 and freeze
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-09-25 23:19 UTC by Armando Antonio
Modified: 2017-10-26 19:31 UTC (History)
1 user (show)

See Also:
i915 platform: CFL
i915 features: power/suspend-resume


Attachments
dmesg CFL-1 (443.98 KB, text/plain)
2017-09-25 23:19 UTC, Armando Antonio
no flags Details
dmesg CFL2 (297.09 KB, text/plain)
2017-09-25 23:20 UTC, Armando Antonio
no flags Details
kernel CFL-1 (1.04 MB, text/plain)
2017-09-25 23:21 UTC, Armando Antonio
no flags Details
kernel CFL-2 (748.83 KB, text/plain)
2017-09-25 23:21 UTC, Armando Antonio
no flags Details

Description Armando Antonio 2017-09-25 23:19:10 UTC
Created attachment 134482 [details]
dmesg  CFL-1

When I send the CFL to S3, S4 and Freeze, DUT is not able to get back from these states with latest configuration.

When I run these tests without firmware and try to get back from any of these states, I get video from the monitors but DUT still without response.

There is a physical swap partition available for these test

Steps:
1.-With a physical swap partition available run the following commands:
	# echo mem> /sys/power/state
	# echo disk > /sys/power/state
	# echo freeze > /sys/power/state
2.- Check that DUT is not able to get back from any of these states

This looks like a regression,  due to kernel 4.13-rc7-428ed2734 didn't present this kind of issues.

Attached kernel.log, dmesg.log and configuration of two different CFL where these tests were performed.  

When I send the CFL to S3, S4 and Freeze, DUT is not able to get back from these states with latest configuration.

When I run these tests without firmware and try to get back from any of these states, I get video from the monitors but DUT still without response.

There is a physical swap partition available for these test

Steps:
1.-With a physical swap partition available run the following commands:
	# echo mem> /sys/power/state
	# echo disk > /sys/power/state
	# echo freeze > /sys/power/state
2.- Check that DUT is not able to get back from any of these states

This looks like a regression,  due to kernel 4.13-rc7-428ed2734 didn't present this kind of issues.

Attached kernel.log, dmesg.log and configuration of two different CFL where these tests were performed.
Comment 1 Armando Antonio 2017-09-25 23:20:51 UTC
Created attachment 134483 [details]
dmesg CFL2
Comment 2 Armando Antonio 2017-09-25 23:21:17 UTC
Created attachment 134484 [details]
kernel CFL-1
Comment 3 Armando Antonio 2017-09-25 23:21:46 UTC
Created attachment 134485 [details]
kernel CFL-2
Comment 4 Armando Antonio 2017-09-25 23:22:12 UTC
Hardware configuration added
CFL-1
======================================
             Software
======================================
kernel version              : 4.14.0-rc2-drm-tip-ww39-commit-0b65077+
hostname                    : gfx-CoffeeLake-Client-Platform
architecture                : x86_64
os version                  : Ubuntu 17.04
os codename                 : zesty
[sudo] password for gfx: kernel driver               : i915
bios revision               : 98.0
bios release date           : 07/30/2017
ksc                         : 1.5
hardware acceleration       : disabled
swap partition              : enabled on (/dev/sda2)

======================================
        Graphic drivers
======================================
xf86-video-intel (tag)      : 2.99.917
xf86-video-intel (commit)   : 2.99.917-781-gc899057
modesetting                 : enabled
modesetting compiled for    : 1.19.99.1 X.Org Video Driver
libdrm                      : 2.4.83
vaapi (intel-driver)        : Intel i965 driver for Intel(R) Coffee Lake - 1.8.4.pre1 (1.8.3-142-g3e05560)
cairo                       : 1.15.9
intel-gpu-tools (tag)       : intel-gpu-tools-1.19-331-gc117213c
intel-gpu-tools (commit)    : c117213c

======================================
             Hardware
======================================
motherboard model          : CoffeeLakeClientPlatform
motherboard id             : CoffeeLakeHDDR4RVP
form factor                : Laptop
manufacturer               : IntelCorporation
cpu family                 : Other
cpu family id              : 6
cpu information            : Genuine Intel(R) CPU 0000 @ 2.80GHz
gpu card                   : Intel Corporation Device 3e9b (prog-if 00 [VGA controller])
memory ram                 : 15.56 GB
max memory ram             : 32 GB
cpu thread                 : 12
cpu core                   : 6
cpu model                  : 158
cpu stepping               : 10
socket                     : Other
hard drive                 : 74GiB (80GB)
current cd clock frequency : 450000 kHz
maximum cd clock frequency : 675000 kHz
displays connected         : eDP-1 DP-2 DP-3

======================================
             Firmware
======================================
dmc fw loaded             : yes
dmc version               : 1.1
guc fw loaded             : SUCCESS
guc version wanted        : 9.14
guc version found         : 9.14

======================================
             kernel parameters
======================================
quiet splash i915.enable_guc_submission=2 i915.enable_guc_loading=2 i915.alpha_support=1 initcall_debug

CFL-2

======================================
	     Software
======================================
kernel version              : 4.14.0-rc2-drm-tip-ww39-commit-0b65077+
hostname                    : gfx-CoffeeLake-Client-Platform
architecture                : x86_64
os version                  : Ubuntu 17.04
os codename                 : zesty
kernel driver               : i915
bios revision               : 104.3
bios release date           : 09/14/2017
ksc                         : 1.5
hardware acceleration       : disabled
swap partition              : enabled on (/dev/sda2)

======================================
	Graphic drivers
======================================
xf86-video-intel (tag)      : 2.99.917
xf86-video-intel (commit)   : 2.99.917-781-gc899057
modesetting                 : enabled
modesetting compiled for    : 1.19.99.1 X.Org Video Driver
libdrm                      : 2.4.83
vaapi (intel-driver)        : Intel i965 driver for Intel(R) Coffee Lake - 1.8.4.pre1 (1.8.3-142-g3e05560)
cairo                       : 1.15.9
intel-gpu-tools (tag)       : intel-gpu-tools-1.19-331-gc117213c
intel-gpu-tools (commit)    : c117213c

======================================
	     Hardware
======================================
motherboard model          : CoffeeLakeClientPlatform
motherboard id             : CoffeeLakeSUDIMMRVP
form factor                : Desktop
manufacturer               : IntelCorporation
cpu family                 : Other
cpu family id              : 6
cpu information            : Genuine Intel(R) CPU 0000 @ 3.60GHz
gpu card                   : Intel Corporation Device 3e92 (prog-if 00 [VGA controller])
memory ram                 : 15.59 GB
max memory ram             : 32 GB
cpu thread                 : 12
cpu core                   : 6
cpu model                  : 158
cpu stepping               : 10
socket                     : Other
hard drive                 : 111GiB (120GB)
current cd clock frequency : 337500 kHz
maximum cd clock frequency : 675000 kHz
displays connected         : eDP-1 DP-1 DP-2

======================================
	     Firmware
======================================
dmc fw loaded             : yes
dmc version               : 1.1
guc fw loaded             : SUCCESS
guc version wanted        : 9.14
guc version found         : 9.14
huc fw loaded             : yes

======================================
	     kernel parameters
======================================
quiet splash drm.debug=0xe pci=pcie_bus_safe intel_iommu=igfx_off i915.alpha_support=1 i915.enable_guc_loading=2 i915.enable_guc_submission=2 resume=/dev/sda2 fastboot
Comment 5 Chris Wilson 2017-09-26 15:55:23 UTC
Maybe unrelated, but of note:

[   19.936409] Interrupt register 0x44418 is not zero: 0x00000001
[   19.936427] ------------[ cut here ]------------
[   19.936472] WARNING: CPU: 6 PID: 247 at drivers/gpu/drm/i915/i915_irq.c:161 gen3_assert_iir_is_zero+0x32/0x80 [i915]
[   19.936475] Modules linked in: e1000e(+) sdhci_pci(+) ptp sdhci pps_core i915(+) mmc_core prime_numbers i2c_hid
[   19.936495] CPU: 6 PID: 247 Comm: systemd-udevd Tainted: G     U          4.14.0-rc2-drm-tip-ww39-commit-0b65077+ #1
[   19.936497] Hardware name: Intel Corporation CoffeeLake Client Platform/CoffeeLake H DDR4 RVP, BIOS CNLSFWR1.R00.X098.A00.1707301945 07/30/2017
[   19.936499] task: ffff88044c90aa40 task.stack: ffffc90000548000
[   19.936524] RIP: 0010:gen3_assert_iir_is_zero+0x32/0x80 [i915]
[   19.936526] RSP: 0018:ffffc9000054b9c0 EFLAGS: 00010082
[   19.936530] RAX: 0000000000000032 RBX: ffff88044bae0000 RCX: 0000000000000002
[   19.936532] RDX: 0000000080000002 RSI: 0000000000000000 RDI: 00000000ffffffff
[   19.936534] RBP: ffffc9000054b9d0 R08: 0000000000000000 R09: 0000000000000001
[   19.936536] R10: 0000000000000001 R11: 00000000d4447445 R12: 0000000000044418
[   19.936538] R13: 0000000000044418 R14: ffff88044bae4f2c R15: 0000000000000006
[   19.936540] FS:  00007f22321528c0(0000) GS:ffff88045b380000(0000) knlGS:0000000000000000
[   19.936542] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
[   19.936544] CR2: 00007f223207f000 CR3: 000000044c9fb001 CR4: 00000000003606e0
[   19.936545] DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
[   19.936547] DR3: 0000000000000000 DR6: 00000000fffe0ff0 DR7: 0000000000000400
[   19.936549] Call Trace:
[   19.936572]  gen8_irq_power_well_post_enable+0x77/0xe0 [i915]
[   19.936596]  hsw_power_well_enable+0xc3/0x130 [i915]
[   19.936619]  intel_power_well_enable+0x35/0x40 [i915]
[   19.936640]  __intel_display_power_get_domain+0x7c/0xa0 [i915]
[   19.936662]  intel_display_power_get+0x30/0x40 [i915]
[   19.936683]  intel_display_set_init_power+0x37/0x40 [i915]
[   19.936704]  intel_power_domains_init_hw+0x5e/0x7a0 [i915]
[   19.936726]  i915_driver_load+0x9a7/0x16b0 [i915]
[   19.936731]  ? trace_hardirqs_on+0xd/0x10
[   19.936753]  i915_pci_probe+0x34/0xa0 [i915]
[   19.936757]  pci_device_probe+0xa3/0x130
[   19.936761]  driver_probe_device+0x299/0x440
[   19.936764]  __driver_attach+0xde/0xe0
[   19.936767]  ? driver_probe_device+0x440/0x440
[   19.936769]  bus_for_each_dev+0x61/0xa0
[   19.936772]  driver_attach+0x19/0x20
[   19.936775]  bus_add_driver+0x1f2/0x260
[   19.936777]  ? 0xffffffffa01ef000
[   19.936780]  driver_register+0x5b/0xd0
[   19.936782]  ? 0xffffffffa01ef000
[   19.936784]  __pci_register_driver+0x66/0x70
[   19.936809]  i915_init+0x6b/0x6e [i915]
[   19.936813]  do_one_initcall+0xef/0x160
[   19.936816]  ? rcu_read_lock_sched_held+0x75/0x80
[   19.936819]  ? kmem_cache_alloc_trace+0x283/0x2f0
[   19.936822]  ? do_init_module+0x22/0x1fa
[   19.936826]  do_init_module+0x5a/0x1fa
[   19.936829]  load_module+0x2205/0x25b0
[   19.936833]  ? kernel_read+0x2c/0x40
[   19.936837]  SyS_finit_module+0xbc/0xf0
[   19.936840]  ? SyS_finit_module+0xbc/0xf0
[   19.936846]  entry_SYSCALL_64_fastpath+0x1c/0xb1
[   19.936848] RIP: 0033:0x7f2230fc29f9
[   19.936850] RSP: 002b:00007ffd31f5d4f8 EFLAGS: 00000246 ORIG_RAX: 0000000000000139
[   19.936853] RAX: ffffffffffffffda RBX: 0000556236e15310 RCX: 00007f2230fc29f9
[   19.936855] RDX: 0000000000000000 RSI: 0000556236e15390 RDI: 000000000000000c
[   19.936857] RBP: 00007f22318e5e23 R08: 0000000000000000 R09: 000000000000003c
[   19.936859] R10: 000000000000000c R11: 0000000000000246 R12: 0000000000000000
[   19.936861] R13: 0000556236e151f0 R14: 0000000000020000 R15: 0000556235394e30
[   19.936865] Code: 89 e5 41 54 41 89 f4 53 48 89 fb ff 97 08 0d 00 00 85 c0 75 05 5b 41 5c 5d c3 89 c2 44 89 e6 48 c7 c7 b8 9d 17 a0 e8 5a 79 0a e1 <0f> ff b9 01 00 00 00 83 ca ff 44 89 e6 48 89 df ff 93 28 0d 00 
[   19.936973] ---[ end trace 42d8b23074860e3d ]---
Comment 6 Jani Saarinen 2017-09-28 10:53:33 UTC
Patch series reference: https://patchwork.freedesktop.org/series/31056/
Comment 7 Jani Saarinen 2017-10-02 09:35:06 UTC
New version https://patchwork.freedesktop.org/series/31058/
and now merged.
Comment 8 Jani Saarinen 2017-10-02 09:36:20 UTC
author	Imre Deak <imre.deak@intel.com>	2017-09-28 10:06:24 (GMT)
committer	Imre Deak <imre.deak@intel.com>	2017-10-02 09:09:11 (GMT)
commit	9dfe2e3ad375a9ba32a13888873ec4586be01ff7 (patch)
Comment 9 Imre Deak 2017-10-03 08:41:48 UTC
(In reply to Jani Saarinen from comment #8)
> author	Imre Deak <imre.deak@intel.com>	2017-09-28 10:06:24 (GMT)
> committer	Imre Deak <imre.deak@intel.com>	2017-10-02 09:09:11 (GMT)
> commit	9dfe2e3ad375a9ba32a13888873ec4586be01ff7 (patch)

Hm, not sure if this bug is resolved. The above fix was just in response to Chris' spot of a WARN in comment#5, but it very well could be an unrelated issue.
Comment 10 Elio 2017-10-26 19:31:30 UTC
Testing with latest drm-tip , warnings related from i915_irq.c are not present anymore.

Creating a physical swap partition with 4.14.0-rc6 commit bcee836, the problem is not present anymore. 

Executing different S states including S0i3 without any kind of issues, even with 4k Monitor attached. 


=====================================
	     Software
======================================
kernel version              : 4.14.0-rc6-drm-tip-ww43-commit-bcee836+
hostname                    : gfx-CoffeeLake-Client-Platform
architecture                : x86_64
os version                  : Ubuntu 17.04
os codename                 : zesty
kernel driver               : i915
bios revision               : 104.3
bios release date           : 09/14/2017
ksc                         : 1.5
hardware acceleration       : [91mdisabled[0m
swap partition              : [92menabled[0m on (/dev/nvme0n1p3)

======================================
	Graphic drivers
======================================
mesa                        : 17.0.7

======================================
	     Hardware
======================================
motherboard model          : CoffeeLakeClientPlatform
motherboard id             : CoffeeLakeSUDIMMRVP
form factor                : Desktop
manufacturer               : IntelCorporation
cpu family                 : Other
cpu family id              : 6
cpu information            : Genuine Intel(R) CPU 0000 @ 3.60GHz
gpu card                   : Intel Corporation Device 3e92 (prog-if 00 [VGA controller])
memory ram                 : 15.58 GB
max memory ram             : 32 GB
display resolution         : 5760x2160
cpu thread                 : 12
cpu core                   : 6
cpu model                  : 158
cpu stepping               : 10
socket                     : Other
hard drive                 : 7446MiB (7807MB)
current cd clock frequency : 540000 kHz
maximum cd clock frequency : 675000 kHz
displays connected         : eDP-1 DP-1


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.